--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-  </head>
-  <body>
-    
-  </body>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body>
+  <section class="w-full h-80 bg-neutral-800 grid grid-cols-5 sm:grid-cols-2 md:grid-cols-4">
+    <div class="bg-red-800"></div>
+    <div class="bg-yellow-500"></div>
+    <div class="bg-lime-900"></div>
+    <div class="bg-pink-700"></div>
+    <div class="bg-blue-800"></div>
+  </section>
+</body>
 </html>
